--- a/test.html
+++ b/test.html
@@ -9,4 +9,10 @@
     <li>Srishti    </li>
     <li>Jharna</li>
     <li>Nikhil</li>
+    <li>Common Friends:
+        <ul>
+            <li>Sree</li>
+            <li>aafrah</li>
+        </ul>
+    </li>
 </ol>
