--- a/test.html
+++ b/test.html
@@ -21,3 +21,8 @@
 
 <a href="https://www.banimadan.com">My Website lol</a><br>
 <a draggable=True>To drag</a>
+<br>
+
+
+<img src="https://picsum.photos/200/300" alt="random photo"/> 
+ 
