--- a/test.html
+++ b/test.html
@@ -1,28 +1,15 @@
-<ul>
-    Spri's Friends
-    <li>Apefa</li>
-    <li>Amie</li>
-    <li>Octavia</li>
-
-</ul>
-<ol>Bani 's Friends
-    <li>Srishti    </li>
-    <li>Jharna</li>
-    <li>Nikhil</li>
-    <li>Common Friends:
-        <ul>
-            <li>Sree</li>
-            <li>aafrah</li>
-        </ul>
-    </li>
-</ol>
+<!DOCTYPE html>
+<html lang="en">
 
 
+<head>
+<meta charset="UTF-8">
+<title>OOOOO</title>
 
-<a href="https://www.banimadan.com">My Website lol</a><br>
-<a draggable=True>To drag</a>
-<br>
+</head>
 
+<body>
 
-<img src="https://picsum.photos/200/300" alt="random photo"/> 
- 
+  <h1>HEllo</h1>  
+</body>
+</html>
